<?xml version="1.0" encoding="utf-8"?>
	<!--
		Licensed under the Apache License, Version 2.0 (the "License"); you
		may not use this file except in compliance with the License. You may
		obtain a copy of the License at:
		http://www.apache.org/licenses/LICENSE-2.0. Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<resources>
	<string name="string">%1$s</string>
	<string name="upgrading_database">Upgrading database...</string>
    <string name="error_loading_url">Error loading url</string>
    <string name="removing_found_cache_from_cache_list">Removing found cache from cache list view.</string>
    <string name="web_page">Web Page</string>
    <string name="problem_importing_from_bcaching">Problem importing from bcaching.com:\n\n%1$s.</string>
    <string name="install_radar_uri">market://search?q=pname:com.eclipsim.gpsstatus2</string>
    <string name="ask_install_radar_app">GeoBeagle requires an app that will accept the RADAR intent. Install GPS Status from the Android Marketplace?</string>
    <string name="log_cache_with_sms">Log cache with SMS</string>
    <string name="log_cache_to_file">Log cache to file</string>
	<string name="field_note_file_caveat">Caches logged to sdcard. Upload with your desktop to http://geocaching.com/my/uploadfieldnotes.aspx</string>
    <string name="sms_caveat">To set up SMS logging, see http://coord.info/textmark.aspx</string>
    <string name="error_writing_cache_log">Error writing cache log to sdcard.</string>
    <string name="log_cache">Log Cache</string>
    <string name="confirm_delete_negative">Do not delete</string>
    <string name="confirm_delete_title">Confirm delete %1$s</string>
    <string name="confirm_delete_body_text">Delete %1$s: "%2$s"?</string>
    <string name="delete_cache">Delete cache</string>
	<string name="too_many_caches">Too many caches to display--zoom in to see
		caches.</string>
	<string name="menu_center_location">My Location</string>
	<string name="satellite_view">Satellite View</string>
	<string name="map_view">Map View</string>
	<string name="geobeagle">GeoBeagle</string>
	<string name="error1">Error: %1$s</string>
	<string name="error2">Error: %1$s\n%2$s</string>
	<string name="meter_right">····›····»····</string>
	<string name="meter_left">····«····‹····</string>
	<string name="select_destination">Select destination</string>
	<string name="go_to">Geocache:</string>
	<string name="via">Android App</string>
	<string name="generic_failure">GENERIC FAILURE error sending SMS, please
		try again</string>
	<string name="no_service">NO SERVICE error sending SMS, please try again
	</string>
	<string name="null_pdu">NULL PDU error sending SMS, please try again
	</string>
	<string name="radio_off">RADIO OFF error sending SMS, please try again
	</string>
	<string name="sms_canceled">Field Note SMS delivery canceled.</string>
	<string name="sms_delivered">Field Note SMS delivered!</string>
	<string name="unknown_error">Unknown error</string>
	<string name="radar">Radar</string>
	<string name="degrees_symbol">°</string>
	<string name="app_name">GeoBeagle</string>
	<string name="maps">Map</string>
	<string name="map">Map</string>
	<string name="list">Nearest Caches</string>
	<string name="geocaching_map">Online Map</string>
	<string name="nearest_caches">Online List</string>
	<string name="sms_sent">SMS sent</string>
	<string name="my_location">My Location</string>
	<string name="field_note_title">Log cache using Field Note</string>
	<string name="send_sms">Send SMS</string>
	<string name="log_fieldnote_to_file">Log field note</string>
	<string name="cancel">Cancel</string>
	<string name="navigate">Navigate</string>
	<string name="recent_locations">Recent locations</string>
	<string name="current_location_null">Current location is not available. Make sure
		your GPS is enabled and try again.</string>
	<string name="out_of_service">OUT OF SERVICE</string>
	<string name="available">AVAILABLE</string>
	<string name="temporarily_unavailable">TEMPORARILY UNAVAILABLE</string>
	<string name="getting_location_from_gps">getting location from gps...</string>
	<string name="navigate_intent">google.navigation:q=%1$.5f,%2$.5f</string>
	<string name="google_maps_intent">geo:0,0?q=loc:%1$.5f,%2$.5f (%3$s)</string>
	<string name="get_coords_toast">&quot;To get the coords from the cache page, click: 'online maps...' / 'Google Maps'.&quot;</string>
	<string name="error_cant_get_location">"Location cannot be determined.  Please ensure that your GPS is enabled and try again."</string>
	<string name="error_opening_file">Unable to open file \'%1$s\'.</string>
	<string name="error_parsing_file">Error parsing file \'%1$s\'.</string>
	<string name="file_not_found">File not found exception: \'%1$s\'.</string>
	<string name="error_reading_file">Error reading file \'%1$s\'.</string>
	<string name="error_writing_cache">Error writing cache: \'%1$s\'.</string>
	<string name="error_no_gpx_files">Nothing to sync: no cache files found in \"%1$s\" folder.
	\n\nGeoBeagle can bulk import thousands of caches at a time.
	Copy gpx/loc/zip files to your \"%1$s\" folder, or set up a BCaching.com account.
	\n\nSee http://code.google.com/p/geobeagle for details.</string>
	<string name="error_cant_read_sd">Error reading folder \"%1$s\", please make sure your sdcard is readable.</string>
	<string name="error_cant_read_sdroot">Error (\"%1$s\") reading folder /sdcard, please make sure your sdcard is readable.</string>
	<string name="error_opening_details_file">"Error opening cache details file '%1$s'.  Please try unmounting your sdcard or re-importing the cache file.</string>
	<string name="error_reading_details_file">"Error reading cache details file '%1$s'.  Please try unmounting your sdcard or re-importing the cache file.</string>
	<string name="error_details_file_version">Sorry, the cache details format is out of date.  Please re-import by selecting Cache List / Sync Caches.</string>
	<string name="my_current_location">My Current Location</string>
	<string name="import_canceled">Sync aborted!</string>
	<string name="menu_show_nearest_caches">Show Nearest</string>
	<string name="menu_show_all_caches">Show All</string>
	<string name="menu_delete_all_caches">Delete All</string>
	<string name="menu_sync_bcaching">Sync BCaching</string>
	<string name="sorting">Filtering / Sorting...</string>
	<string name="search_for">Search for</string>
	<string name="cache_list_title">Nearest caches (%2$d total)</string>
	<string name="cache_list_title_all">%1$d caches out of %2$d</string>
	<array name="nearest_objects">
		<item>
			http://www.atlasquest.com/results.html?gTypeId=2;gSort=5;gStatus=1209;gCoord=%1$.5f,%2$.5f</item>
	  <item>http://www.geocaching.com/seek/nearest.aspx?lat=%1$.5f&amp;lng=%2$.5f&amp;f=1</item>
	  <item>http://opencaching.cz/search.php?searchto=searchbydistance&amp;showresult=1&amp;output=HTML&amp;latNS=%1$s&amp;lat_h=%2$d&amp;lat_min=%3$.3f&amp;lonEW=%4$s&amp;lon_h=%5$d&amp;lon_min=%6$.3f&amp;distance=75&amp;unit=km</item>
	  <item>http://opencaching.de/search.php?searchto=searchbydistance&amp;showresult=1&amp;output=HTML&amp;latNS=%1$s&amp;lat_h=%2$d&amp;lat_min=%3$.3f&amp;lonEW=%4$s&amp;lon_h=%5$d&amp;lon_min=%6$.3f&amp;distance=75&amp;unit=km</item>
	  <item>http://opencaching.pl/search.php?searchto=searchbydistance&amp;showresult=1&amp;output=HTML&amp;latNS=%1$s&amp;lat_h=%2$d&amp;lat_min=%3$.3f&amp;lonEW=%4$s&amp;lon_h=%5$d&amp;lon_min=%6$.3f&amp;distance=75&amp;unit=km</item>
	</array>
	<array name="cache_page_url">
	  <item>http://www.atlasquest.com/showinfo.html?gBoxId=%1s</item>
	  <item>http://www.geocaching.com/seek/cache_details.aspx?wp=GC%1$s</item>
	  <item>http://www.opencaching.de/viewcache.php?wp=OC%1$s</item>
	  <item>http://geocaching.com.au/cache/GA%1$s</item>
	  <item>http://geocaching.com.au/cache/TP%1$s</item>
	</array>
	<string name="menu_choose_filter">Choose filter</string>
	<string name="menu_cache_list">Cache List</string>
	<string name="menu_search_online">Search Online</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_edit_geocache">Edit</string>
	<string name="menu_google_maps">Navigate</string>
	<string name="menu_log_dnf">Log DNF :-(</string>
	<string name="menu_log_find">Log Find :-)</string>
	<string name="menu_toggle_satellite">Satellite view</string>
	<string name="menu_add_my_location">Add Waypoint</string>
	<string name="menu_sync">Sync Caches</string>
	<string name="menu_map">Show Map</string>
	<string name="confirm_delete_all">Are you sure you want to delete all caches?</string>
	<string name="delete_all_title">Delete all</string>
	<string name="install_radar">Install GPS Status</string>
	<string name="no_intent_handler">Error: no intent handler available for %1$s.</string>
	<array name="select_nav_choices">
		<item>Radar</item>
		<item>Google Maps</item>
		<item>Turn-by-turn Navigation</item>
	</array>
	<string-array name="shake_wake_duration_choices">
		<item>Don\'t extend timeout</item>
		<item>5 seconds</item>
		<item>5 minutes</item>
		<item>1 hour</item>
	</string-array>
	<string-array name="shake_wake_duration_values">
		<item>0</item>
		<item>5</item>
		<item>300</item>
		<item>3600</item>
	</string-array>
	<string name="select_nav_choices_title">Please select</string>
	<string name="search_hint">Search for caches</string>
	<string name="sync_message_bcaching_start">***bcaching.com***</string>
	<string name="sync_message_bcaching_last_sync">  last synced: %1$s</string>
	<string name="sync_message_bcaching_no_new_caches">  no new caches</string>
	<string name="sync_message_bcaching_synced_caches">  synced %1$d caches</string>
	<string name="must_have_a_sync_method">You must enable either BCaching or sdcard syncing.</string>
</resources>
